--- a/app/globals.css
+++ b/app/globals.css
@@ -6,3 +6,26 @@ body, html {
   padding: 0px;
   margin: 0px;
 }
+
+.hover-underline-animation {
+  display: inline-block;
+  position: relative;
+}
+
+.hover-underline-animation:after {
+  content: '';
+  position: absolute;
+  width: 100%;
+  transform: scaleX(0);
+  height: 2px;
+  bottom: 0;
+  left: 0;
+  background-color: hsl(var(--inc));
+  transform-origin: bottom right;
+  transition: transform 0.1s ease-out;
+}
+
+.hover-underline-animation:hover:after {
+  transform: scaleX(1);
+  transform-origin: bottom left;
+}
