Fixing Shit + Starting wirk on create group

--- a/app/globals.css
+++ b/app/globals.css
@@ -29,3 +29,7 @@ body, html {
   transform: scaleX(1);
   transform-origin: bottom left;
 }
+
+.stroked {
+  text-shadow: 0 0 3px black, 0 0 3px black, 0 0 3px black, 0 0 3px black;
+}
